add more example swagger
