# docs/swagger.yaml
@@ -33,6 +33,31 @@ definitions:
 info:
   contact: {}
 paths:
+  /task/{user_id}:
+    get:
+      description: Get all tasks by user_id
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/wapper.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/wapper.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/wapper.Response'
+      summary: Get tasks by user_id
+      tags:
+      - task
   /user/login:
     post:
       consumes:
